--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a
+                class="nav-link"
+                href="https://www.youtube.com/watch?v=5eZyspecXJE"
+                >Beef (Do Not Click)</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
